Development of js code

--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -8,6 +8,10 @@
     <title>MyCoin</title>
 </head>
 <body>
-    <h1 style="font-weight: bolder;"> PROYECTO FINAL! VAMOS DIMA QUE TU PUEDES COÑOOOOO</h1>
+    <form id="prueba">
+        <input type="text">
+        <input type="submit">
+
+    </form>
 </body>
 </html>
