--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -8,10 +8,11 @@
     <title>MyCoin</title>
 </head>
 <body>
-    <form id="prueba">
-        <input type="text">
-        <input type="submit">
+    <form method="post" >
+        <input type="text" id="prueba">
+        
 
     </form>
+    <button id="enviar">enviar</button>
 </body>
 </html>
