--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -30,7 +30,7 @@
             <article id="trading_form" class="inactive">
                 <form id="movements_form" method="post">
                     <input type="text" name="moneda_from" id="moneda_from_form" placeholder="Introduzca la moneda que desea vender">
-                    <input type="text" name="amount_from" id="amount_from_form" placeholder="Introduzca la cantidad a vender" autocomplete="off"> 
+                    <input type="text" name="amount_from" id="amount_from_form" placeholder="Introduzca la cantidad a vender"> 
                     <input type="text" name="moneda_to" id="moneda_to_form"  placeholder="Introduzca la moneda que desea comprar">
                     <input type="text" name="amount_to" id="amount_to_form"  placeholder="Introduzca la cantidad que desea comprar">
                 </form>
