Buy coin functions working again. Finished get_all_movements function

--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -25,7 +25,11 @@
                 <th>From</th>
                 <th>To</th>
             </tr>
-            <button id="btn-buy">Comprar</button>    
+            <button id="btn-buy">Comprar</button>   
+            <div>
+                <p>{{ datos }}</p>
+
+            </div> 
 
             <article id="trading_form" class="inactive">
                 <form id="movements_form" method="post">
