--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -27,7 +27,10 @@
             </tr>
             <button id="btn-buy">Comprar</button>   
             <div>
-                <p>{{ datos }}</p>
+                <table>
+                    {% for i in datos %}
+
+                </table>
 
             </div> 
 
