Proceeding to update get_coin_amount

--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" ></script>
+    <script defer src="{{ url_for('static', filename='js/app.js') }}"></script>
     <title>MyCoin</title>
 </head>
 
@@ -48,32 +49,37 @@
             </tbody>
         </table>
 
-        <article id="trading_form" class="inactive">
-            <form id="movements_form" method="post">
+        <article id="trading_form" >
+            <form id="movements_form" method="post" class="inactive">
                 <input type="text" name="moneda_from" id="moneda_from_form" placeholder="Introduzca la moneda que desea vender">
                 <input type="text" name="amount_from" id="amount_from_form" placeholder="Introduzca la cantidad a vender"> 
                 <input type="text" name="moneda_to" id="moneda_to_form"  placeholder="Introduzca la moneda que desea comprar">
                 <input type="text" name="amount_to" id="amount_to_form"  placeholder="Introduzca la cantidad que desea comprar">
             </form>
+                
+        </article>        
             
-
+        <article>
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Your Coins
+            </button>
             <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-            </a>
-
-            <ul class="dropdown-menu" id="dropdown-avaible-coins">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+                <ul class="dropdown-menu">
+                    
+                    <li><a class="dropdown-item">Action</a></li>
+                    <li><a class="dropdown-item">Another action</a></li>
+                    <li><a class="dropdown-item">Something else here</a></li>
+                </ul>
             </div>
 
             <div>
                 <p>
                     {{ amount }}
                 </p>
+
             </div>
+
+
             
             <div>
                 <button id="btn-alta">
@@ -98,6 +104,5 @@
 
 
 
-    
-</body>
+</body> 
 </html>
