--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" ></script>
-    <script defer src="{{ url_for('static', filename='js/app.js') }}"></script>
+   
     <title>MyCoin</title>
 </head>
 
@@ -50,34 +49,73 @@
         </table>
 
        
-        <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();">
-            <div>
-                <select id="moneda_from_form" class="form-select" style="width:30%;">
-                <option value="" selected disabled>Tu moneda (selecciona)</option>
-                {% for row in amount %}
-                    <option value="{{ row[0] }}">{{ row[0] }} - Wallet: {{ row[1] }}</option>
-                {% endfor %}
-                </select>
+        <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();" style="max-width:600px; margin:auto;">
+    
+            <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 10px;">
+                
+                <div style="flex: 1; display: flex; flex-direction: column;">
+                    <select id="moneda_from_form" class="form-select" style="width:100%;">
+                        <option value="" selected disabled>Tu moneda (selecciona)</option>
+                        <option value="EUR">EUR</option>
+                        {% for row in amount %}
+                            <option value="{{ row[0] }}">{{ row[0] }} - Wallet: {{ row[1] }}</option>
+                        {% endfor %}
+                    </select>
+                    <input id="amount_from_form" type="text" placeholder="Cantidad" inputmode="decimal" style="margin-top:8px; width:100%;" />
+                </div>
 
-                <select id="moneda_to_form" class="form-select" style="width:30%;">
-                <option value="" selected disabled>Moneda destino (selecciona)</option>
-                <option value="bitcoin">bitcoin</option>
-                <option value="ethereum">ethereum</option>
-                </select>
+                <div style="flex: 1; display: flex; flex-direction: column;">
+                    <select id="moneda_to_form" class="form-select" style="width:100%;">
+                        <option value="" selected disabled>Moneda destino (selecciona)</option>
+                        {% for row in coins %}
+                        <option value="{{ row }}">{{ row }}</option>
+                        {% endfor %}
+                    </select>
+                    <input id="amount_to" type="text" readonly style="margin-top:8px; width:100%;" placeholder="Resultado" />
+                </div>
             </div>
 
-            <div>
-                <!-- El input de cantidad debe tener id para que JS lo lea -->
-                <input id="amount_from_form" type="text" placeholder="amount" inputmode="decimal" />
+            <div style="text-align:center; margin-top:10px;">
+                <button type="submit" class="btn btn-primary">Calcular</button>
             </div>
 
-            <div>
-                <!-- amount_to como input para usar .value -->
-                <input id="amount_to" type="text" readonly />
-                <button type="submit">Calcular</button>
-            </div>
+
         </form>
-      
+
+        <div class="modal fade" id="purchaseModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">Purchase Ticket</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="cleanModal()"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div>
+                            <div>
+                                <h4 style="font-weight: bolder;">From:</h4>
+                                <h6 style="display: inline; font-weight: bold;">Coin From:</h6><p id="coin_from_modal" style="display: inline; margin-left:10px;"></p>
+                            </div>
+                            <div>
+                                <h6 style="display: inline; font-weight: bold;">Amount from:</h6><p id="amount_from_modal" style="display: inline; margin-left:10px;"></p>
+                            </div>    
+                        </div>
+                        <div>
+                            <div>
+                                <h4 style="font-weight: bolder;">To:</h4>
+                                <h6 style="display: inline; font-weight: bold;">Coin to:</h6><p id="coin_to_modal" style="display: inline; margin-left:10px;"></p>
+                            </div>
+                            <div>
+                                <h6 style="display: inline; font-weight: bold;">Amount to:</h6><p id="amount_to_modal" style="display: inline; margin-left:10px;"></p>
+                            </div>    
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="cleanModal()">Close</button>
+                        <button type="button" class="btn btn-primary">Purchase</button>
+                    </div>
+                </div>
+            </div>
+        </div>
                     
            
              
@@ -92,7 +130,8 @@
     </section>
 
 
-
-
+  
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" ></script>
+    <script defer src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body> 
 </html>
