Buy movement function in js updated and working, /movements working, /status pending

--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -29,7 +29,7 @@
                 <th scope="col">Amount:</th>
                 <th scope="col">To</th>
                 <th scope="col">Amount</th>
-                <th scope="col">Price per Unit</th>
+                <th scope="col">Price per Unit/EUR</th>
                 </tr>
             </thead>
             <tbody>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="cleanModal()">Close</button>
-                        <button type="button" class="btn btn-primary">Purchase</button>
+                        <button type="button" class="btn btn-primary" onclick="buyMovement()">Purchase!</button>
                     </div>
                 </div>
             </div>
