--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -25,11 +25,11 @@
             <thead>
                 <tr>
                 <th scope="col">Date/Time</th>
-                <th scope="col">From</th>
-                <th scope="col">Amount:</th>
-                <th scope="col">To</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Price per Unit/EUR</th>
+                <th scope="col">Coin From:</th>
+                <th scope="col">Amount From:</th>
+                <th scope="col">Coin To:</th>
+                <th scope="col">Amount To:</th>
+                <th scope="col">Price per Unit/EUR:</th>
                 </tr>
             </thead>
             <tbody>
@@ -48,8 +48,8 @@
             </tbody>
         </table>
 
-       
-        <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();" style="max-width:600px; margin:auto;">
+       <button class="btn-primary" id="formBtn">+</button>
+        <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();" style="max-width:600px; margin:auto; display:none;">
     
             <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 10px;">
                 
