--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -24,7 +24,7 @@
         <table class="table table-striped-columns" id="movements_table">
             <thead>
                 <tr>
-                <th scope="col">Date/Time</th>
+                <th scope="col">Date/Time:</th>
                 <th scope="col">Coin From:</th>
                 <th scope="col">Amount From:</th>
                 <th scope="col">Coin To:</th>
@@ -48,31 +48,31 @@
             </tbody>
         </table>
 
-       <button class="btn-primary" id="formBtn">+</button>
+        <button class="btn-primary" id="formBtn">+</button>
         <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();" style="max-width:600px; margin:auto; display:none;">
     
             <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 10px;">
                 
                 <div style="flex: 1; display: flex; flex-direction: column;">
                     <select id="moneda_from_form" class="form-select" style="width:100%;">
-                        <option value="" selected disabled>Tu moneda (selecciona)</option>
+                        <option value="" selected disabled>Your coins:</option>
                         <option value="EUR">EUR</option>
                         {% for row in myCoins %}
                             <option value="{{ row[0] }}">{{ row[0] }} - Wallet: {{ row[1] }}</option>
                         {% endfor %}
                     </select>
-                    <input id="amount_from_form" type="text" placeholder="Cantidad" inputmode="decimal" style="margin-top:8px; width:100%;" />
+                    <input id="amount_from_form" type="text" placeholder="Amount" inputmode="decimal" style="margin-top:8px; width:100%;" />
                 </div>
 
                 <div style="flex: 1; display: flex; flex-direction: column;">
                     <select id="moneda_to_form" class="form-select" style="width:100%;">
-                        <option value="" selected disabled>Moneda destino (selecciona)</option>
+                        <option value="" selected disabled>Coin to:</option>
                         <option value="EUR">EUR</option>
                         {% for row in coins %}
                         <option value="{{ row }}">{{ row }}</option>
                         {% endfor %}
                     </select>
-                    <input id="amount_to" type="text" readonly style="margin-top:8px; width:100%;" placeholder="Resultado" />
+                    <input id="amount_to" type="text" readonly style="margin-top:8px; display: none; width:100%;" >
                 </div>
             </div>
 
@@ -117,6 +117,7 @@
                 </div>
             </div>
         </div>
+    </section>
                     
            
              
@@ -128,7 +129,6 @@
 
 
 
-    </section>
 
 
   
