Status endpoint finished

--- a/my_coin/templates/index.html
+++ b/my_coin/templates/index.html
@@ -48,7 +48,7 @@
             </tbody>
         </table>
 
-        <button class="btn-primary" id="formBtn">+</button>
+        <button class="btn btn-primary" id="formBtn">+</button>
         <form id="conversion_form" onsubmit="event.preventDefault(); calcularConversion();" style="max-width:600px; margin:auto; display:none;">
     
             <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 10px;">
@@ -112,11 +112,34 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="cleanModal()">Close</button>
-                        <button type="button" class="btn btn-primary" onclick="buyMovement()">Purchase!</button>
+                        <button type="button" class="btn btn-primary" id="purchaseBtn" onclick="buyMovement()">Purchase!</button>
                     </div>
                 </div>
             </div>
         </div>
+    
+        
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     </section>
                     
            
